Added intelij project files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 .nb-gradle
 .gradle
+.idea
 build
 cache
+.idea
+*.classpath
+*.project
+*.iml
+
 /*/build
 /*/cache
 /*/.settings
 /*/bin
-
-*.classpath
-*.project
 /.settings
+
